--- a/_posts/2015-05-18-welcome.markdown
+++ b/_posts/2015-05-18-welcome.markdown
@@ -6,8 +6,7 @@ categories: [general, welcome, introduction]
 tags: [general, welcome, intro]
 fullview: true
 ---
-
-{% highlight java %}
+{% highlight Java %}
 abstract class MyBlog {
 
   /*
